--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="shortcut icon" href="https://www.mofpi.gov.in/sites/default/files/favicon.ico"
+    type="image/vnd.microsoft.icon" />
+  <link rel="alternate" type="application/rss+xml" title="Ministry of Food Processing Industries | GOI RSS"
+    href="https://www.mofpi.gov.in/rss.xml" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-  <title>Web</title>
+  <title>Home | Ministry of Food Processing Industries | Government of India </title>
 </head>
 
 <body>
