--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="https://www.mofpi.gov.in/sites/default/files/favicon.ico"
-        type="image/vnd.microsoft.icon" />
-    <link rel="alternate" type="application/rss+xml" title="Ministry of Food Processing Industries | GOI RSS"
+
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+
+    <link rel="alternate" type="application/rss+xml" title="Food Processing Corporation of India (FPCI)"
         href="https://www.mofpi.gov.in/rss.xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-    <title>Home | Ministry of Food Processing Industries | Government of India </title>
+    <title>Food Processing Corporation of India (FPCI)</title>
 </head>
 
 <body>
